# aiplaymusic

./: .env.example  .gitignore  README.md  config.py  install.py  mcp_config.json  pyproject.toml  requirements.txt
ai_music_player/: __main__.py  config.py
ai_music_player/database/: db.py
ai_music_player/player/: __init__.py  player.py
ai_music_player/scanner/: music_scanner.py
database/: __init__.py  models.py
scanner/: __init__.py
tests/: __init__.py  test_config.py  test_db.py  test_mcp_server.py  test_models.py  test_music_scanner.py  test_player.py
