[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-music-player"
version = "1.0.0"
description = "AI Music Player MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pygame>=2.0.0",
    "mutagen>=1.47.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ai-music-player = "ai_music_player.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_music_player*", "ai_music_player.database*", "ai_music_player.player*", "ai_music_player.scanner*"]
exclude = ["tests*", "music*", ".venv*", "*.egg*"]

[tool.uvx]
dependencies = [
    "fastmcp>=2.0.0",
    "pygame>=2.0.0",
    "mutagen>=1.47.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]
